welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:10: error: 'while' expected but identifier found.
			do gauche();avance();avance();avance();avance()
                                    ^Poucet:10: error: '(' expected but ';' found.
			do gauche();avance();avance();avance();avance()
                                            ^Poucet:11: error: ';' expected but 'else' found.
		else droite();avance();
                ^Poucet:17: error: 'while' expected but '}' found.
}
^